--- a/templates/buyerhome.html
+++ b/templates/buyerhome.html
@@ -1,6 +1,6 @@
 {% extends 'Newbase.html' %}
 {% block content%}
-Welcome Buyer
+Welcome User
 <li><a href="{% url 'buyeredit' %}">buyeredit</a></li>
 <li><a href="{% url 'viewproduct' %}">viewproduct</a></li>
 <li><a href="{% url 'cartview' %}">cartview</a></li>
