--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -2,6 +2,7 @@
 {% block content%}
 <html>
     <body>
+        Hello
         <table>
             <form method="post" action="{% url 'editAction' %}" enctype="multipart/form-data">
                 {% csrf_token %}
